k8s/networkpolicy/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-policy
  namespace: ecommerce

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress
    - Egress

  ingress:
    # Frontend → Backend
    - from:
        - podSelector:
            matchLabels:
              app: frontend

        # Ingress Controller → Backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

      ports:
        - protocol: TCP
          port: 5000

  egress:
    # Backend → PostgreSQL
    - to:
        - podSelector:
            matchLabels:
              app: postgres

      ports:
        - protocol: TCP
          port: 5432

    # Backend → DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
